--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ layout: default
 
   <div class="text-center mt-1 mb-3">
     <code class="highlight border-highlight badge badge-pill border">
-      * denotes <i>joint first-authors, † denotes no particular order</i>
+      * denotes <i>joint first-authors, † denotes no particular order, α denotes equal contribution listed alphabetically</i>
     </code>
   </div>
 
